Input + button aligning and label fix

--- a/sass/blocks/_btn.scss
+++ b/sass/blocks/_btn.scss
@@ -37,7 +37,7 @@
 .input-group-btn {
     > .btn {
         box-shadow: none;
-        padding: $padding-base-vertical + 3 $padding-base-horizontal;
+        padding: $padding-base-vertical $padding-base-horizontal;
 
         > .glyphicon {
             color: color-variation(grey, darken, 1);
