--- a/sass/blocks/_input.scss
+++ b/sass/blocks/_input.scss
@@ -45,7 +45,7 @@ textarea,
 
 .input-lg {
     &.input-lg {
-        line-height: 40px;
-        font-size: $font-size-base;
+        line-height: $line-height-large;
+        font-size: $font-size-large;
     }
 }
